--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <body>
   <header>
     <h1>Echo Chamber Breaker</h1>
+    <p>
+
+      How can AI be used in echo chambers to minimize the spread of misinformation due to confirmation bias by showing other perspectives on an issue? 
+
+     
+     
+     </p>
+     <p style='color: lightgray'>NOTE: Due to the model running in the browser, it might take a while to load especially the first time</p>
+
   </header>
   <main>
     <section id="echo-chamber">
